--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,10 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  mobx: ^1.2.1+2
-  flutter_mobx: ^1.1.0+2
   flutter:
     sdk: flutter
-
+  mobx: ^1.1.1
+  flutter_mobx: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -35,6 +34,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  mobx_codegen: ^1.0.3
+  build_runner: ^1.10.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
